Security Patches v1.7.1